# kirikiri-x

./: BUILD.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: workflow.yml
cmake/: CompilerSettings.cmake  Dependencies.cmake  Platform.cmake
src/backends/sdl/: CMakeLists.txt  sdl_graphics.cc  sdl_graphics.h
src/runtime/: CMakeLists.txt
src/runtime/core/: event_manager.cc  event_manager.h  layer_manager.h  libruntime.cc  libruntime.h  script_manager.cc  script_manager.h  window_manager.cc  window_manager.h
src/runtime/core/interfaces/: console.h  filesystem.h  graphics.h  sysfunc.h
src/runtime/core/native_classes/: system.cc
src/runtime/core/native_instances/: layer_instance.cc  layer_instance.h  window_instance.cc  window_instance.h
src/runtime/core/rendering/: layer_compositor.cc  layer_compositor.h  layer_tree.cc  layer_tree.h
src/runtime/core/storage/: unified_storage_path.h
src/runtime/core/tjs_classes/layer/: layer_class.cc  layer_class.h  layer_instance.cc  layer_instance.h
src/runtime/core/tjs_classes/minimal/: minimal_class.cc  minimal_class.h
src/runtime/core/tjs_classes/rect/: rect_class.cc  rect_class.h  rect_instance.cc  rect_instance.h
src/runtime/core/tjs_classes/storages/: storages_class.cc  storages_class.h
src/runtime/core/tjs_classes/system/: system_class.cc  system_class.h
src/runtime/core/tjs_classes/window/: window_class.cc  window_class.h  window_instance.cc  window_instance.h
src/tests/: CMakeLists.txt
src/tests/core/native_instances/: rect.cc
